#23 fixed broken layout in Safari

--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -3,6 +3,7 @@
 
 #logjam-container {
   width: 100%;
+  display: -webkit-flex;
   display: flex;
   flex-direction: row;
   margin-top: 45px;
